--- a/index.html
+++ b/index.html
@@ -33,83 +33,102 @@
     </style>
   </head>
   <body>
-    Report for Jeremy Robson Daily Weekly Monthly Work 5hrs
-    <!-- daily -->
-    Previous - 7hrs
-    <!-- daily -->
-    32hrs
-    <!-- weekly -->
-    Previous - 36hrs
-    <!-- weekly -->
-    103hrs
-    <!-- monthly -->
-    Previous - 128hrs
-    <!-- monthly -->
+    <main>
+      <section class="heading">
+        <div class="heading__details">
+          <img
+            class="heading__image"
+            src="images/image-jeremy.png"
+            alt="Jeremy Robson photo"
+            width="234"
+            height="234"
+          />
+          <div class="heading__header">
+            Report for
+            <div class="heading__name">Jeremy Robson</div>
+          </div>
+        </div>
+        <div class="heading__time">Daily Weekly Monthly</div>
+      </section>
 
-    Play 1hr
-    <!-- daily -->
-    Previous - 2hrs
-    <!-- daily -->
-    10hrs
-    <!-- weekly -->
-    Previous - 8hrs
-    <!-- weekly -->
-    23hrs
-    <!-- monthly -->
-    Previous - 29hrs
-    <!-- monthly -->
+      Work 5hrs
+      <!-- daily -->
+      Previous - 7hrs
+      <!-- daily -->
+      32hrs
+      <!-- weekly -->
+      Previous - 36hrs
+      <!-- weekly -->
+      103hrs
+      <!-- monthly -->
+      Previous - 128hrs
+      <!-- monthly -->
 
-    Study 0hrs
-    <!-- daily -->
-    Previous - 1hr
-    <!-- daily -->
-    4hrs
-    <!-- weekly -->
-    Previous - 7hrs
-    <!-- weekly -->
-    13hrs
-    <!-- monthly -->
-    Previous - 19hrs
-    <!-- monthly -->
+      Play 1hr
+      <!-- daily -->
+      Previous - 2hrs
+      <!-- daily -->
+      10hrs
+      <!-- weekly -->
+      Previous - 8hrs
+      <!-- weekly -->
+      23hrs
+      <!-- monthly -->
+      Previous - 29hrs
+      <!-- monthly -->
 
-    Exercise 1hr
-    <!-- daily -->
-    Previous - 1hr
-    <!-- daily -->
-    4hrs
-    <!-- weekly -->
-    Previous - 5hrs
-    <!-- weekly -->
-    11hrs
-    <!-- monthly -->
-    Previous - 18hrs
-    <!-- monthly -->
+      Study 0hrs
+      <!-- daily -->
+      Previous - 1hr
+      <!-- daily -->
+      4hrs
+      <!-- weekly -->
+      Previous - 7hrs
+      <!-- weekly -->
+      13hrs
+      <!-- monthly -->
+      Previous - 19hrs
+      <!-- monthly -->
 
-    Social 1hr
-    <!-- daily -->
-    Previous - 3hrs
-    <!-- daily -->
-    5hrs
-    <!-- weekly -->
-    Previous - 10hrs
-    <!-- weekly -->
-    21hrs
-    <!-- monthly -->
-    Previous - 23hrs
-    <!-- monthly -->
+      Exercise 1hr
+      <!-- daily -->
+      Previous - 1hr
+      <!-- daily -->
+      4hrs
+      <!-- weekly -->
+      Previous - 5hrs
+      <!-- weekly -->
+      11hrs
+      <!-- monthly -->
+      Previous - 18hrs
+      <!-- monthly -->
 
-    Self Care 0hrs
-    <!-- daily -->
-    Previous - 1hr
-    <!-- daily -->
-    2hrs
-    <!-- weekly -->
-    Previous - 2hrs
-    <!-- weekly -->
-    7hrs
-    <!-- monthly -->
-    Previous - 11hrs
-    <!-- monthly -->
+      Social 1hr
+      <!-- daily -->
+      Previous - 3hrs
+      <!-- daily -->
+      5hrs
+      <!-- weekly -->
+      Previous - 10hrs
+      <!-- weekly -->
+      21hrs
+      <!-- monthly -->
+      Previous - 23hrs
+      <!-- monthly -->
+
+      Self Care 0hrs
+      <!-- daily -->
+      Previous - 1hr
+      <!-- daily -->
+      2hrs
+      <!-- weekly -->
+      Previous - 2hrs
+      <!-- weekly -->
+      7hrs
+      <!-- monthly -->
+      Previous - 11hrs
+      <!-- monthly -->
+    </main>
 
     <div class="attribution">
       Challenge by
