Finished positioning heading section

--- a/index.html
+++ b/index.html
@@ -48,7 +48,13 @@
             <div class="heading__name">Jeremy Robson</div>
           </div>
         </div>
-        <div class="heading__time">Daily Weekly Monthly</div>
+        <div class="heading__timesection">
+          <ul class="heading__times">
+            <li class="heading__time">Daily</li>
+            <li class="heading__time">Weekly</li>
+            <li class="heading__time">Monthly</li>
+          </ul>
+        </div>
       </section>
 
       Work 5hrs
