--- a/index.html
+++ b/index.html
@@ -50,9 +50,15 @@
         </div>
         <div class="heading__timesection">
           <ul class="heading__times">
-            <li class="heading__time">Daily</li>
-            <li class="heading__time">Weekly</li>
-            <li class="heading__time">Monthly</li>
+            <li class="heading__time">
+              <button class="button daily">Daily</button>
+            </li>
+            <li class="heading__time">
+              <button class="button weekly active">Weekly</button>
+            </li>
+            <li class="heading__time">
+              <button class="button monthly">Monthly</button>
+            </li>
           </ul>
         </div>
       </section>
