--- a/index.html
+++ b/index.html
@@ -51,95 +51,53 @@
         <div class="heading__timesection">
           <ul class="heading__times">
             <li class="heading__time">
-              <button class="button daily">Daily</button>
+              <button class="button" id="daily">Daily</button>
             </li>
             <li class="heading__time">
-              <button class="button weekly active">Weekly</button>
+              <button class="button active" id="weekly">Weekly</button>
             </li>
             <li class="heading__time">
-              <button class="button monthly">Monthly</button>
+              <button class="button" id="monthly">Monthly</button>
             </li>
           </ul>
         </div>
       </section>
 
-      Work 5hrs
-      <!-- daily -->
-      Previous - 7hrs
-      <!-- daily -->
-      32hrs
-      <!-- weekly -->
-      Previous - 36hrs
-      <!-- weekly -->
-      103hrs
-      <!-- monthly -->
-      Previous - 128hrs
-      <!-- monthly -->
+      <section class="stats work">
+        <div class="stats__title"></div>
+        <div class="stats__number">32hrs</div>
+        <div class="stats__previous">Last Week - 36 hrs</div>
+      </section>
 
-      Play 1hr
-      <!-- daily -->
-      Previous - 2hrs
-      <!-- daily -->
-      10hrs
-      <!-- weekly -->
-      Previous - 8hrs
-      <!-- weekly -->
-      23hrs
-      <!-- monthly -->
-      Previous - 29hrs
-      <!-- monthly -->
+      <section class="stats play">
+        <div class="stats__title"></div>
+        <div class="stats__number">32hrs</div>
+        <div class="stats__previous">Last Week - 36 hrs</div>
+      </section>
 
-      Study 0hrs
-      <!-- daily -->
-      Previous - 1hr
-      <!-- daily -->
-      4hrs
-      <!-- weekly -->
-      Previous - 7hrs
-      <!-- weekly -->
-      13hrs
-      <!-- monthly -->
-      Previous - 19hrs
-      <!-- monthly -->
+      <section class="stats study">
+        <div class="stats__title"></div>
+        <div class="stats__number">32hrs</div>
+        <div class="stats__previous">Last Week - 36 hrs</div>
+      </section>
 
-      Exercise 1hr
-      <!-- daily -->
-      Previous - 1hr
-      <!-- daily -->
-      4hrs
-      <!-- weekly -->
-      Previous - 5hrs
-      <!-- weekly -->
-      11hrs
-      <!-- monthly -->
-      Previous - 18hrs
-      <!-- monthly -->
+      <section class="stats exercise">
+        <div class="stats__title"></div>
+        <div class="stats__number">32hrs</div>
+        <div class="stats__previous">Last Week - 36 hrs</div>
+      </section>
 
-      Social 1hr
-      <!-- daily -->
-      Previous - 3hrs
-      <!-- daily -->
-      5hrs
-      <!-- weekly -->
-      Previous - 10hrs
-      <!-- weekly -->
-      21hrs
-      <!-- monthly -->
-      Previous - 23hrs
-      <!-- monthly -->
+      <section class="stats social">
+        <div class="stats__title"></div>
+        <div class="stats__number">32hrs</div>
+        <div class="stats__previous">Last Week - 36 hrs</div>
+      </section>
 
-      Self Care 0hrs
-      <!-- daily -->
-      Previous - 1hr
-      <!-- daily -->
-      2hrs
-      <!-- weekly -->
-      Previous - 2hrs
-      <!-- weekly -->
-      7hrs
-      <!-- monthly -->
-      Previous - 11hrs
-      <!-- monthly -->
+      <section class="stats self care">
+        <div class="stats__title"></div>
+        <div class="stats__number">32hrs</div>
+        <div class="stats__previous">Last Week - 36 hrs</div>
+      </section>
     </main>
 
     <div class="attribution">
