Set it to weekly numbers from data json by default

--- a/index.html
+++ b/index.html
@@ -65,38 +65,38 @@
 
       <section class="stats work">
         <div class="stats__title"></div>
-        <div class="stats__number">32hrs</div>
-        <div class="stats__previous">Last Week - 36 hrs</div>
+        <div class="stats__number"></div>
+        <div class="stats__previous"></div>
       </section>
 
       <section class="stats play">
         <div class="stats__title"></div>
-        <div class="stats__number">32hrs</div>
-        <div class="stats__previous">Last Week - 36 hrs</div>
+        <div class="stats__number"></div>
+        <div class="stats__previous"></div>
       </section>
 
       <section class="stats study">
         <div class="stats__title"></div>
-        <div class="stats__number">32hrs</div>
-        <div class="stats__previous">Last Week - 36 hrs</div>
+        <div class="stats__number"></div>
+        <div class="stats__previous"></div>
       </section>
 
       <section class="stats exercise">
         <div class="stats__title"></div>
-        <div class="stats__number">32hrs</div>
-        <div class="stats__previous">Last Week - 36 hrs</div>
+        <div class="stats__number"></div>
+        <div class="stats__previous"></div>
       </section>
 
       <section class="stats social">
         <div class="stats__title"></div>
-        <div class="stats__number">32hrs</div>
-        <div class="stats__previous">Last Week - 36 hrs</div>
+        <div class="stats__number"></div>
+        <div class="stats__previous"></div>
       </section>
 
       <section class="stats self care">
         <div class="stats__title"></div>
-        <div class="stats__number">32hrs</div>
-        <div class="stats__previous">Last Week - 36 hrs</div>
+        <div class="stats__number"></div>
+        <div class="stats__previous"></div>
       </section>
     </main>
 
