Added ellipses and moved attribution away from last box

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
     <style>
       .attribution {
+        margin-block-start: 1.5em;
         font-size: 11px;
         text-align: center;
       }
@@ -64,39 +65,93 @@
       </section>
 
       <section class="stats work">
-        <div class="stats__title"></div>
-        <div class="stats__number"></div>
-        <div class="stats__previous"></div>
+        <div class="stats__this">
+          <div class="stats__title"></div>
+          <div class="stats__number"></div>
+        </div>
+        <div class="stats__last">
+          <img
+            class="stats__dots"
+            src="/images/icon-ellipsis.svg"
+            alt="See more detail"
+          />
+          <div class="stats__previous"></div>
+        </div>
       </section>
 
       <section class="stats play">
-        <div class="stats__title"></div>
-        <div class="stats__number"></div>
-        <div class="stats__previous"></div>
+        <div class="stats__this">
+          <div class="stats__title"></div>
+          <div class="stats__number"></div>
+        </div>
+        <div class="stats__last">
+          <img
+            class="stats__dots"
+            src="/images/icon-ellipsis.svg"
+            alt="See more detail"
+          />
+          <div class="stats__previous"></div>
+        </div>
       </section>
 
       <section class="stats study">
-        <div class="stats__title"></div>
-        <div class="stats__number"></div>
-        <div class="stats__previous"></div>
+        <div class="stats__this">
+          <div class="stats__title"></div>
+          <div class="stats__number"></div>
+        </div>
+        <div class="stats__last">
+          <img
+            class="stats__dots"
+            src="/images/icon-ellipsis.svg"
+            alt="See more detail"
+          />
+          <div class="stats__previous"></div>
+        </div>
       </section>
 
       <section class="stats exercise">
-        <div class="stats__title"></div>
-        <div class="stats__number"></div>
-        <div class="stats__previous"></div>
+        <div class="stats__this">
+          <div class="stats__title"></div>
+          <div class="stats__number"></div>
+        </div>
+        <div class="stats__last">
+          <img
+            class="stats__dots"
+            src="/images/icon-ellipsis.svg"
+            alt="See more detail"
+          />
+          <div class="stats__previous"></div>
+        </div>
       </section>
 
       <section class="stats social">
-        <div class="stats__title"></div>
-        <div class="stats__number"></div>
-        <div class="stats__previous"></div>
+        <div class="stats__this">
+          <div class="stats__title"></div>
+          <div class="stats__number"></div>
+        </div>
+        <div class="stats__last">
+          <img
+            class="stats__dots"
+            src="/images/icon-ellipsis.svg"
+            alt="See more detail"
+          />
+          <div class="stats__previous"></div>
+        </div>
       </section>
 
       <section class="stats self care">
-        <div class="stats__title"></div>
-        <div class="stats__number"></div>
-        <div class="stats__previous"></div>
+        <div class="stats__this">
+          <div class="stats__title"></div>
+          <div class="stats__number"></div>
+        </div>
+        <div class="stats__last">
+          <img
+            class="stats__dots"
+            src="/images/icon-ellipsis.svg"
+            alt="See more detail"
+          />
+          <div class="stats__previous"></div>
+        </div>
       </section>
     </main>
 
