Added stats coloured bits

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         <div class="stats__previous"></div>
       </section>
 
-      <section class="stats self care">
+      <section class="stats self-care">
         <div class="stats__title"></div>
         <img
           class="stats__dots"
