--- a/index.html
+++ b/index.html
@@ -70,6 +70,8 @@
           class="stats__dots"
           src="/images/icon-ellipsis.svg"
           alt="See more detail"
+          width="21"
+          height="5"
         />
         <div class="stats__number"></div>
         <div class="stats__previous"></div>
@@ -81,6 +83,8 @@
           class="stats__dots"
           src="/images/icon-ellipsis.svg"
           alt="See more detail"
+          width="21"
+          height="5"
         />
         <div class="stats__number"></div>
         <div class="stats__previous"></div>
@@ -92,6 +96,8 @@
           class="stats__dots"
           src="/images/icon-ellipsis.svg"
           alt="See more detail"
+          width="21"
+          height="5"
         />
         <div class="stats__number"></div>
         <div class="stats__previous"></div>
@@ -103,6 +109,8 @@
           class="stats__dots"
           src="/images/icon-ellipsis.svg"
           alt="See more detail"
+          width="21"
+          height="5"
         />
         <div class="stats__number"></div>
         <div class="stats__previous"></div>
@@ -114,6 +122,8 @@
           class="stats__dots"
           src="/images/icon-ellipsis.svg"
           alt="See more detail"
+          width="21"
+          height="5"
         />
         <div class="stats__number"></div>
         <div class="stats__previous"></div>
@@ -125,6 +135,8 @@
           class="stats__dots"
           src="/images/icon-ellipsis.svg"
           alt="See more detail"
+          width="21"
+          height="5"
         />
         <div class="stats__number"></div>
         <div class="stats__previous"></div>
