Arranged everything for desktop

--- a/index.html
+++ b/index.html
@@ -64,82 +64,84 @@
         </div>
       </section>
 
-      <section class="stats work">
-        <div class="stats__title"></div>
-        <img
-          class="stats__dots"
-          src="/images/icon-ellipsis.svg"
-          alt="See more detail"
-          width="21"
-          height="5"
-        />
-        <div class="stats__number"></div>
-        <div class="stats__previous"></div>
-      </section>
+      <section class="stats-section">
+        <div class="stats work">
+          <div class="stats__title"></div>
+          <img
+            class="stats__dots"
+            src="/images/icon-ellipsis.svg"
+            alt="See more detail"
+            width="21"
+            height="5"
+          />
+          <div class="stats__number"></div>
+          <div class="stats__previous"></div>
+        </div>
 
-      <section class="stats play">
-        <div class="stats__title"></div>
-        <img
-          class="stats__dots"
-          src="/images/icon-ellipsis.svg"
-          alt="See more detail"
-          width="21"
-          height="5"
-        />
-        <div class="stats__number"></div>
-        <div class="stats__previous"></div>
-      </section>
+        <div class="stats play">
+          <div class="stats__title"></div>
+          <img
+            class="stats__dots"
+            src="/images/icon-ellipsis.svg"
+            alt="See more detail"
+            width="21"
+            height="5"
+          />
+          <div class="stats__number"></div>
+          <div class="stats__previous"></div>
+        </div>
 
-      <section class="stats study">
-        <div class="stats__title"></div>
-        <img
-          class="stats__dots"
-          src="/images/icon-ellipsis.svg"
-          alt="See more detail"
-          width="21"
-          height="5"
-        />
-        <div class="stats__number"></div>
-        <div class="stats__previous"></div>
-      </section>
+        <div class="stats study">
+          <div class="stats__title"></div>
+          <img
+            class="stats__dots"
+            src="/images/icon-ellipsis.svg"
+            alt="See more detail"
+            width="21"
+            height="5"
+          />
+          <div class="stats__number"></div>
+          <div class="stats__previous"></div>
+        </div>
 
-      <section class="stats exercise">
-        <div class="stats__title"></div>
-        <img
-          class="stats__dots"
-          src="/images/icon-ellipsis.svg"
-          alt="See more detail"
-          width="21"
-          height="5"
-        />
-        <div class="stats__number"></div>
-        <div class="stats__previous"></div>
-      </section>
+        <div class="stats exercise">
+          <div class="stats__title"></div>
+          <img
+            class="stats__dots"
+            src="/images/icon-ellipsis.svg"
+            alt="See more detail"
+            width="21"
+            height="5"
+          />
+          <div class="stats__number"></div>
+          <div class="stats__previous"></div>
+        </div>
 
-      <section class="stats social">
-        <div class="stats__title"></div>
-        <img
-          class="stats__dots"
-          src="/images/icon-ellipsis.svg"
-          alt="See more detail"
-          width="21"
-          height="5"
-        />
-        <div class="stats__number"></div>
-        <div class="stats__previous"></div>
-      </section>
+        <div class="stats social">
+          <div class="stats__title"></div>
+          <img
+            class="stats__dots"
+            src="/images/icon-ellipsis.svg"
+            alt="See more detail"
+            width="21"
+            height="5"
+          />
+          <div class="stats__number"></div>
+          <div class="stats__previous"></div>
+        </div>
 
-      <section class="stats self-care">
-        <div class="stats__title"></div>
-        <img
-          class="stats__dots"
-          src="/images/icon-ellipsis.svg"
-          alt="See more detail"
-          width="21"
-          height="5"
-        />
-        <div class="stats__number"></div>
-        <div class="stats__previous"></div>
+        <div class="stats self-care">
+          <div class="stats__title"></div>
+          <img
+            class="stats__dots"
+            src="/images/icon-ellipsis.svg"
+            alt="See more detail"
+            width="21"
+            height="5"
+          />
+          <div class="stats__number"></div>
+          <div class="stats__previous"></div>
+        </div>
       </section>
     </main>
 
