Made ellipses inline svg so it goes white on hover

--- a/index.html
+++ b/index.html
@@ -67,78 +67,120 @@
       <section class="stats-section">
         <div class="stats work">
           <div class="stats__title"></div>
-          <img
-            class="stats__dots"
-            src="/images/icon-ellipsis.svg"
-            alt="See more detail"
-            width="21"
-            height="5"
-          />
+          <button>
+            <svg
+              class="stats__dots"
+              width="21"
+              height="5"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z"
+                fill="#BBC0FF"
+                fill-rule="evenodd"
+              />
+            </svg>
+          </button>
           <div class="stats__number"></div>
           <div class="stats__previous"></div>
         </div>
 
         <div class="stats play">
           <div class="stats__title"></div>
-          <img
-            class="stats__dots"
-            src="/images/icon-ellipsis.svg"
-            alt="See more detail"
-            width="21"
-            height="5"
-          />
+          <button>
+            <svg
+              class="stats__dots"
+              width="21"
+              height="5"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z"
+                fill="#BBC0FF"
+                fill-rule="evenodd"
+              />
+            </svg>
+          </button>
           <div class="stats__number"></div>
           <div class="stats__previous"></div>
         </div>
 
         <div class="stats study">
           <div class="stats__title"></div>
-          <img
-            class="stats__dots"
-            src="/images/icon-ellipsis.svg"
-            alt="See more detail"
-            width="21"
-            height="5"
-          />
+          <button>
+            <svg
+              class="stats__dots"
+              width="21"
+              height="5"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z"
+                fill="#BBC0FF"
+                fill-rule="evenodd"
+              />
+            </svg>
+          </button>
           <div class="stats__number"></div>
           <div class="stats__previous"></div>
         </div>
 
         <div class="stats exercise">
           <div class="stats__title"></div>
-          <img
-            class="stats__dots"
-            src="/images/icon-ellipsis.svg"
-            alt="See more detail"
-            width="21"
-            height="5"
-          />
+          <button>
+            <svg
+              class="stats__dots"
+              width="21"
+              height="5"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z"
+                fill="#BBC0FF"
+                fill-rule="evenodd"
+              />
+            </svg>
+          </button>
           <div class="stats__number"></div>
           <div class="stats__previous"></div>
         </div>
 
         <div class="stats social">
           <div class="stats__title"></div>
-          <img
-            class="stats__dots"
-            src="/images/icon-ellipsis.svg"
-            alt="See more detail"
-            width="21"
-            height="5"
-          />
+          <button>
+            <svg
+              class="stats__dots"
+              width="21"
+              height="5"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z"
+                fill="#BBC0FF"
+                fill-rule="evenodd"
+              />
+            </svg>
+          </button>
           <div class="stats__number"></div>
           <div class="stats__previous"></div>
         </div>
 
         <div class="stats self-care">
           <div class="stats__title"></div>
-          <img
-            class="stats__dots"
-            src="/images/icon-ellipsis.svg"
-            alt="See more detail"
-            width="21"
-            height="5"
-          />
+          <button>
+            <svg
+              class="stats__dots"
+              width="21"
+              height="5"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z"
+                fill="#BBC0FF"
+                fill-rule="evenodd"
+              />
+            </svg>
+          </button>
           <div class="stats__number"></div>
           <div class="stats__previous"></div>
         </div>
