Added tab index so stats boxes are focusable

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       </section>
 
       <section class="stats-section">
-        <div class="stats work">
+        <div class="stats work" tabindex="0">
           <div class="stats__title"></div>
           <button>
             <svg
@@ -85,7 +85,7 @@
           <div class="stats__previous"></div>
         </div>
 
-        <div class="stats play">
+        <div class="stats play" tabindex="0">
           <div class="stats__title"></div>
           <button>
             <svg
@@ -105,7 +105,7 @@
           <div class="stats__previous"></div>
         </div>
 
-        <div class="stats study">
+        <div class="stats study" tabindex="0">
           <div class="stats__title"></div>
           <button>
             <svg
@@ -125,7 +125,7 @@
           <div class="stats__previous"></div>
         </div>
 
-        <div class="stats exercise">
+        <div class="stats exercise" tabindex="0">
           <div class="stats__title"></div>
           <button>
             <svg
@@ -145,7 +145,7 @@
           <div class="stats__previous"></div>
         </div>
 
-        <div class="stats social">
+        <div class="stats social" tabindex="0">
           <div class="stats__title"></div>
           <button>
             <svg
@@ -165,7 +165,7 @@
           <div class="stats__previous"></div>
         </div>
 
-        <div class="stats self-care">
+        <div class="stats self-care" tabindex="0">
           <div class="stats__title"></div>
           <button>
             <svg
