Fixed accessibility errors (apart from contrast)

--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
             width="234"
             height="234"
           />
-          <div class="heading__header">
+          <h1 class="heading__header">
             Report for
             <div class="heading__name">Jeremy Robson</div>
-          </div>
+          </h1>
         </div>
         <div class="heading__timesection">
           <ul class="heading__times">
@@ -67,7 +67,7 @@
       <section class="stats-section">
         <div class="stats work" tabindex="0">
           <div class="stats__title"></div>
-          <button>
+          <button aria-label="This does something">
             <svg
               class="stats__dots"
               width="21"
@@ -87,7 +87,7 @@
 
         <div class="stats play" tabindex="0">
           <div class="stats__title"></div>
-          <button>
+          <button aria-label="This does something">
             <svg
               class="stats__dots"
               width="21"
@@ -107,7 +107,7 @@
 
         <div class="stats study" tabindex="0">
           <div class="stats__title"></div>
-          <button>
+          <button aria-label="This does something">
             <svg
               class="stats__dots"
               width="21"
@@ -127,7 +127,7 @@
 
         <div class="stats exercise" tabindex="0">
           <div class="stats__title"></div>
-          <button>
+          <button aria-label="This does something">
             <svg
               class="stats__dots"
               width="21"
@@ -147,7 +147,7 @@
 
         <div class="stats social" tabindex="0">
           <div class="stats__title"></div>
-          <button>
+          <button aria-label="This does something">
             <svg
               class="stats__dots"
               width="21"
@@ -167,7 +167,7 @@
 
         <div class="stats self-care" tabindex="0">
           <div class="stats__title"></div>
-          <button>
+          <button aria-label="This does something">
             <svg
               class="stats__dots"
               width="21"
@@ -187,12 +187,12 @@
       </section>
     </main>
 
-    <div class="attribution">
+    <footer class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
       >. Coded by <a href="https://github.com/nicm42">Nic</a>.
-    </div>
+    </footer>
 
     <script type="module" src="/src/main.ts"></script>
   </body>
