Changed the too-many divs into more sensible tags

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           />
           <h1 class="heading__header">
             Report for
-            <div class="heading__name">Jeremy Robson</div>
+            <p class="heading__name">Jeremy Robson</p>
           </h1>
         </div>
         <div class="heading__timesection">
@@ -66,7 +66,7 @@
 
       <section class="stats-section">
         <div class="stats work" tabindex="0">
-          <div class="stats__title"></div>
+          <h2 class="stats__title"></h2>
           <button aria-label="This does something">
             <svg
               class="stats__dots"
@@ -81,12 +81,12 @@
               />
             </svg>
           </button>
-          <div class="stats__number"></div>
-          <div class="stats__previous"></div>
+          <p class="stats__number"></p>
+          <p class="stats__previous"></p>
         </div>
 
         <div class="stats play" tabindex="0">
-          <div class="stats__title"></div>
+          <h2 class="stats__title"></h2>
           <button aria-label="This does something">
             <svg
               class="stats__dots"
@@ -101,12 +101,12 @@
               />
             </svg>
           </button>
-          <div class="stats__number"></div>
-          <div class="stats__previous"></div>
+          <p class="stats__number"></p>
+          <p class="stats__previous"></p>
         </div>
 
         <div class="stats study" tabindex="0">
-          <div class="stats__title"></div>
+          <h2 class="stats__title"></h2>
           <button aria-label="This does something">
             <svg
               class="stats__dots"
@@ -121,12 +121,12 @@
               />
             </svg>
           </button>
-          <div class="stats__number"></div>
-          <div class="stats__previous"></div>
+          <p class="stats__number"></p>
+          <p class="stats__previous"></p>
         </div>
 
         <div class="stats exercise" tabindex="0">
-          <div class="stats__title"></div>
+          <h2 class="stats__title"></h2>
           <button aria-label="This does something">
             <svg
               class="stats__dots"
@@ -141,12 +141,12 @@
               />
             </svg>
           </button>
-          <div class="stats__number"></div>
-          <div class="stats__previous"></div>
+          <p class="stats__number"></p>
+          <p class="stats__previous"></p>
         </div>
 
         <div class="stats social" tabindex="0">
-          <div class="stats__title"></div>
+          <h2 class="stats__title"></h2>
           <button aria-label="This does something">
             <svg
               class="stats__dots"
@@ -161,12 +161,12 @@
               />
             </svg>
           </button>
-          <div class="stats__number"></div>
-          <div class="stats__previous"></div>
+          <p class="stats__number"></p>
+          <p class="stats__previous"></p>
         </div>
 
         <div class="stats self-care" tabindex="0">
-          <div class="stats__title"></div>
+          <h2 class="stats__title"></h2>
           <button aria-label="This does something">
             <svg
               class="stats__dots"
@@ -181,8 +181,8 @@
               />
             </svg>
           </button>
-          <div class="stats__number"></div>
-          <div class="stats__previous"></div>
+          <p class="stats__number"></p>
+          <p class="stats__previous"></p>
         </div>
       </section>
     </main>
