Changed p to span

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           />
           <h1 class="heading__header">
             Report for
-            <p class="heading__name">Jeremy Robson</p>
+            <span class="heading__name">Jeremy Robson</span>
           </h1>
         </div>
         <div class="heading__timesection">
